# quizHub

./: .env.example  .gitignore  README.md  docker-compose.yml
services/api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 202409011200_initial_schema.py  202409151200_add_categories.py  202409151200_add_subjects.py  202409201200_add_bookmarks.py  202410010900_phase1_multitenant.py  202410151200_add_username_and_email_verification.py  202410201630_add_user_account_type.py  202410220930_add_org_logo_and_avatar.py  202410221010_scope_org_content.py
services/api/app/: main.py
services/api/app/api/: deps.py
services/api/app/api/routes/: admin.py  auth.py  (+13 more)
services/api/app/core/: config.py  difficulty.py  security.py  strings.py
services/api/app/db/: base.py  seed.py  session.py
services/api/app/models/: __init__.py  attempt.py  bookmark.py  category.py  organization.py  question.py  quiz.py  subject.py  topic.py  user.py
services/api/app/schemas/: admin.py  analytics.py  attempt.py  auth.py  bookmark.py  bulk_import.py  category.py  dashboard.py  management.py  notifications.py  organization.py  practice.py  public.py  question.py  quiz.py  subject.py  topic.py  user.py
services/api/app/services/: __init__.py  bulk_import_service.py  config_service.py  email_service.py  enrollment_service.py  notification_service.py
services/api/tests/: conftest.py  test_admin_management.py  test_attempts_history.py  test_auth.py  test_bookmarks.py  test_bulk_import.py  test_practice.py
(+105 files in other folders)
